[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/NumberGuess.gd" type="Script" id=1]
[ext_resource path="res://src/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Commodore Angled v1.2.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.223529, 0.356863, 0.227451, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.341176, 0.192157, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.301961, 0.470588, 0.305882, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.462745, 0.270588, 0.270588, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.384314, 0.223529, 0.223529, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.333333, 0.333333, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.223529, 0.356863, 0.227451, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.184314, 0.341176, 0.192157, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.301961, 0.470588, 0.305882, 1 )
shadow_size = 2

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]

[sub_resource type="DynamicFont" id=14]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]

[sub_resource type="DynamicFont" id=16]
size = 15
extra_spacing_space = -5
font_data = ExtResource( 3 )

[node name="NumberGuess" type="Polygon2D"]
position = Vector2( -155.555, -125.304 )
scale = Vector2( 1.11381, 1.02412 )
color = Color( 0.258824, 0.278431, 0.337255, 1 )
polygon = PoolVector2Array( 723.243, 171.175, 723.243, 757.044, 1217.04, 757.044, 1217.04, 171.175 )
script = ExtResource( 1 )

[node name="IncButton" parent="." instance=ExtResource( 2 )]
margin_left = 1016.0
margin_top = 196.0
margin_right = 1173.0
margin_bottom = 245.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "+"

[node name="DecButton" parent="." instance=ExtResource( 2 )]
margin_left = 1015.0
margin_top = 269.0
margin_right = 1172.0
margin_bottom = 318.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "-"

[node name="SendRequestButton" parent="." instance=ExtResource( 2 )]
margin_left = 791.0
margin_top = 342.0
margin_right = 948.0
margin_bottom = 391.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "Guess"

[node name="InputField" type="RichTextLabel" parent="."]
margin_left = 768.0
margin_top = 196.0
margin_right = 970.0
margin_bottom = 318.0
custom_styles/normal = SubResource( 13 )
custom_fonts/normal_font = SubResource( 14 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "5"

[node name="ResponseText" type="RichTextLabel" parent="."]
anchor_right = 0.26
margin_left = 746.0
margin_top = 415.0
margin_right = 1195.0
margin_bottom = 733.0
custom_styles/normal = SubResource( 15 )
custom_fonts/normal_font = SubResource( 16 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "{
  \"test\": \"test123\",
  \"test_again\": \"test_12356\",
  \"data\": [
    \"abc\": 123,
	\"123\": \"abc\",
  ]
}"

[node name="SendRequestTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="IncButton" to="." method="_on_IncButton_pressed"]
[connection signal="pressed" from="DecButton" to="." method="_on_DecButton_pressed"]
[connection signal="pressed" from="SendRequestButton" to="." method="_on_SendRequestButton_pressed"]
[connection signal="timeout" from="SendRequestTimer" to="." method="_on_SendRequestTimer_timeout"]
